# saas-template

./: .gitignore  LICENSE  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
frontend/: Dockerfile  package-lock.json
frontend/src/: index.css
landing/: Dockerfile  package-lock.json
lending/: package.json
