[project]
name = "backend"
version = "0.1.0"
description = "Backend for Saas template"
authors = [
    {name = "Oleksandr Nakorenok",email = "alexandrnakorenok@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
